--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,35 @@ html,
 body {
   height: 100%;
 }
+header {
+  border: 1px solid black;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+header nav {
+  border: 1px solid blue;
+  width: 18rem;
+  height: 2.5rem;
+  margin: 5px;
+  padding-left: 3rem;
+  margin-left: 9rem;
+}
+header img {
+  width: 206px;
+  height: 267px;
+  border: 1px solid green;
+  margin: 5px;
+  margin-bottom: -6.4rem;
+}
+header .intro {
+  border: 1px solid red;
+  width: 38.5rem;
+  height: 6rem;
+  margin: 5px;
+}
+header .intro h2 {
+  font-size: 3rem;
+  text-align: center;
+  margin-bottom: 0.3rem;
+}
