--- a/less/index.less
+++ b/less/index.less
@@ -32,6 +32,8 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	background-color: beige;
+	display: flex;
+	flex-direction: column;
 }
 ol, ul {
 	list-style: none;
@@ -56,7 +58,7 @@ table {
 
 html, body {
 	height: 100%;
-	width: 840px;
+	//width: 840px;
 	
 }
 
